# mlfcs

./: .gitignore  .python-version  README.md  check.ipynb  get_bayesian_final_results.py  get_final_results.py  model.pt  output_bayesian.csv  output_full.csv  output_full_tmp.csv  output_retrain.csv  output_retrain_tmp.csv  output_template.csv  output_try.csv  pyproject.toml  run.ipynb  run.py
config/: experiment_config.py  model_config.py
data/spx/: data_df.csv
examples/: 0_Start.ipynb  1_Naive_Predictor.ipynb
experiments/: BSTS.ipynb
experiments/konrad/: hinge_weibull_online_monthly.csv  lognormal_online_monthly.csv  mixer.ipynb  normal_online_monthly.csv  test.ipynb  test2.ipynb  test3.ipynb  weibull_online_monthly.csv
experiments/marcus/: GP_with_final_preprocessing.ipynb
output/: run_2025-03-24 16:13:52.798074.pt  run_2025-03-24 16:15:21.254060.pt  run_2025-03-24 16:19:10.467182.pt  run_2025-03-24 17:01:09.322261.pt  run_2025-03-24 17:03:06.243286.pt  run_2025-03-24 17:03:44.533118.pt  run_2025-03-24 17:12:46.598858.pt  run_2025-03-24 17:12:47.507206.pt  run_2025-03-24 17:13:11.804106.pt  run_2025-03-24 17:13:12.534376.pt  run_2025-03-24 17:14:03.072460.pt  run_2025-03-24 17:14:03.727744.pt  run_2025-03-24 17:14:34.829082.pt  run_2025-03-24 17:14:35.502548.pt  run_2025-03-24 17:16:30.917014.pt  run_2025-03-24 17:16:31.602387.pt
plots/: mybib.bib  notes.md  overleaf.txt  uncert._qpng
vol_predict/: bayesian_from_timestamps_runner.py  bayesian_sequential_runner.py  etna_sequential_runner.py  from_timestamps_runner.py  runner.py  sequential_runner.py
(+916 files in other folders)
